--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                 <a href="#products" class="navbar-link" data-nav-link>Product</a>
               </li>
 
-              <li>
+              <!-- <li>
                 <a href="#blog" class="navbar-link" data-nav-link>Blog</a>
-              </li>
+              </li> -->
 
               <li>
                 <a href="#contact" class="navbar-link" data-nav-link>Contact</a>
@@ -169,11 +169,11 @@
             <span>Profile</span>
           </button> -->
 
-          <!-- <button class="header-bottom-actions-btn" aria-label="Cart">
+          <button class="header-bottom-actions-btn" aria-label="Cart">
             <ion-icon name="cart-outline"></ion-icon>
 
-            <span>Cart</span>
-          </button> -->
+            <span>Products</span>
+          </button>
 
           <button class="header-bottom-actions-btn" data-nav-open-btn aria-label="Open Menu">
             <ion-icon name="menu-outline"></ion-icon>
@@ -242,7 +242,7 @@
         <div class="container">
 
           <figure class="about-banner">
-            <img style="width: 400px; border-radius: 10px;" src="./assets/images/about-banner-1.jpg" alt="solar installation">
+            <img style="width: 350px; border-radius: 10px;" src="./assets/images/about-banner-1.jpg" alt="solar installation">
 
             <!-- <img style="border-radius: 10px;" src="./assets/images/about-banner-2.jpg" alt="solar installation" class="abs-img"> -->
           </figure>
@@ -1097,7 +1097,7 @@
         - #BLOG
       -->
 
-      <section class="blog" id="blog">
+      <!-- <section class="blog" id="blog">
         <div class="container">
 
           <p class="section-subtitle">News & Blogs</p>
@@ -1242,7 +1242,7 @@
           </ul>
 
         </div>
-      </section>
+      </section> -->
 
        <!-- 
         - #PROPERTY
@@ -1251,16 +1251,16 @@
       <section class="property" id="property">
         <div class="container">
 
-          <p class="section-subtitle">Properties</p>
+          <p class="section-subtitle">What Our Client Says</p>
 
-          <h2 class="h2 section-title">Featured Listings</h2>
+          <h2 class="h2 section-title">Testimonials</h2>
 
           <ul class="property-list has-scrollbar">
 
             <li>
               <div class="property-card">
 
-                <figure class="card-banner">
+                <!-- <figure class="card-banner">
 
                   <a href="#">
                     <img src="./assets/images/property-1.jpg" alt="New Apartment Nice View" class="w-100">
@@ -1290,23 +1290,23 @@
 
                   </div>
 
-                </figure>
+                </figure> -->
 
                 <div class="card-content">
 
-                  <div class="card-price">
+                  <!-- <div class="card-price">
                     <strong>$34,900</strong>/Month
                   </div>
 
                   <h3 class="h3 card-title">
                     <a href="#">New Apartment Nice View</a>
-                  </h3>
+                  </h3> -->
 
                   <p class="card-text">
-                    Beautiful Huge 1 Family House In Heart Of Westbury. Newly Renovated With New Wood
+                    I love jegmtechworld
                   </p>
 
-                  <ul class="card-list">
+                  <!-- <ul class="card-list">
 
                     <li class="card-item">
                       <strong>3</strong>
@@ -1332,7 +1332,7 @@
                       <span>Square Ft</span>
                     </li>
 
-                  </ul>
+                  </ul> -->
 
                 </div>
 
@@ -1341,15 +1341,15 @@
                   <div class="card-author">
 
                     <figure class="author-avatar">
-                      <img src="./assets/images/author.jpg" alt="William Seklo" class="w-100">
+                      <img src="./assets/images/author.jpeg" alt="William Seklo" class="w-100">
                     </figure>
 
                     <div>
                       <p class="author-name">
-                        <a href="#">William Seklo</a>
+                        <a href="#">Isaac .O</a>
                       </p>
 
-                      <p class="author-title">Estate Agents</p>
+                      <p class="author-title">Mechanical Engineer</p>
                     </div>
 
                   </div>
@@ -1378,128 +1378,10 @@
             <li>
               <div class="property-card">
 
-                <figure class="card-banner">
+                <!-- <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/property-2.jpg" alt="Modern Apartments" class="w-100">
-                  </a>
-
-                  <div class="card-badge orange">For Sales</div>
-
-                  <div class="banner-actions">
-
-                    <button class="banner-actions-btn">
-                      <ion-icon name="location"></ion-icon>
-
-                      <address>Belmont Gardens, Chicago</address>
-                    </button>
-
-                    <button class="banner-actions-btn">
-                      <ion-icon name="camera"></ion-icon>
-
-                      <span>4</span>
-                    </button>
-
-                    <button class="banner-actions-btn">
-                      <ion-icon name="film"></ion-icon>
-
-                      <span>2</span>
-                    </button>
-
-                  </div>
-
-                </figure>
-
-                <div class="card-content">
-
-                  <div class="card-price">
-                    <strong>$34,900</strong>/Month
-                  </div>
-
-                  <h3 class="h3 card-title">
-                    <a href="#">Modern Apartments</a>
-                  </h3>
-
-                  <p class="card-text">
-                    Beautiful Huge 1 Family House In Heart Of Westbury. Newly Renovated With New Wood
-                  </p>
-
-                  <ul class="card-list">
-
-                    <li class="card-item">
-                      <strong>3</strong>
-
-                      <ion-icon name="bed-outline"></ion-icon>
-
-                      <span>Bedrooms</span>
-                    </li>
-
-                    <li class="card-item">
-                      <strong>2</strong>
-
-                      <ion-icon name="man-outline"></ion-icon>
-
-                      <span>Bathrooms</span>
-                    </li>
-
-                    <li class="card-item">
-                      <strong>3450</strong>
-
-                      <ion-icon name="square-outline"></ion-icon>
-
-                      <span>Square Ft</span>
-                    </li>
-
-                  </ul>
-
-                </div>
-
-                <div class="card-footer">
-
-                  <div class="card-author">
-
-                    <figure class="author-avatar">
-                      <img src="./assets/images/author.jpg" alt="William Seklo" class="w-100">
-                    </figure>
-
-                    <div>
-                      <p class="author-name">
-                        <a href="#">William Seklo</a>
-                      </p>
-
-                      <p class="author-title">Estate Agents</p>
-                    </div>
-
-                  </div>
-
-                  <div class="card-footer-actions">
-
-                    <button class="card-footer-actions-btn">
-                      <ion-icon name="resize-outline"></ion-icon>
-                    </button>
-
-                    <button class="card-footer-actions-btn">
-                      <ion-icon name="heart-outline"></ion-icon>
-                    </button>
-
-                    <button class="card-footer-actions-btn">
-                      <ion-icon name="add-circle-outline"></ion-icon>
-                    </button>
-
-                  </div>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="property-card">
-
-                <figure class="card-banner">
-
-                  <a href="#">
-                    <img src="./assets/images/property-3.jpg" alt="Comfortable Apartment" class="w-100">
+                    <img src="./assets/images/property-1.jpg" alt="New Apartment Nice View" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -1526,23 +1408,23 @@
 
                   </div>
 
-                </figure>
+                </figure> -->
 
                 <div class="card-content">
 
-                  <div class="card-price">
+                  <!-- <div class="card-price">
                     <strong>$34,900</strong>/Month
                   </div>
 
                   <h3 class="h3 card-title">
-                    <a href="#">Comfortable Apartment</a>
-                  </h3>
+                    <a href="#">New Apartment Nice View</a>
+                  </h3> -->
 
                   <p class="card-text">
-                    Beautiful Huge 1 Family House In Heart Of Westbury. Newly Renovated With New Wood
+                    I love jegmtechworld
                   </p>
 
-                  <ul class="card-list">
+                  <!-- <ul class="card-list">
 
                     <li class="card-item">
                       <strong>3</strong>
@@ -1568,7 +1450,7 @@
                       <span>Square Ft</span>
                     </li>
 
-                  </ul>
+                  </ul> -->
 
                 </div>
 
@@ -1577,15 +1459,15 @@
                   <div class="card-author">
 
                     <figure class="author-avatar">
-                      <img src="./assets/images/author.jpg" alt="William Seklo" class="w-100">
+                      <img src="./assets/images/author.jpeg" alt="William Seklo" class="w-100">
                     </figure>
 
                     <div>
                       <p class="author-name">
-                        <a href="#">William Seklo</a>
+                        <a href="#">Isaac .O</a>
                       </p>
 
-                      <p class="author-title">Estate Agents</p>
+                      <p class="author-title">Mechanical Engineer</p>
                     </div>
 
                   </div>
@@ -1614,10 +1496,10 @@
             <li>
               <div class="property-card">
 
-                <figure class="card-banner">
+                <!-- <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/property-4.png" alt="Luxury villa in Rego Park" class="w-100">
+                    <img src="./assets/images/property-1.jpg" alt="New Apartment Nice View" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -1644,23 +1526,23 @@
 
                   </div>
 
-                </figure>
+                </figure> -->
 
                 <div class="card-content">
 
-                  <div class="card-price">
+                  <!-- <div class="card-price">
                     <strong>$34,900</strong>/Month
                   </div>
 
                   <h3 class="h3 card-title">
-                    <a href="#">Luxury villa in Rego Park</a>
-                  </h3>
+                    <a href="#">New Apartment Nice View</a>
+                  </h3> -->
 
                   <p class="card-text">
-                    Beautiful Huge 1 Family House In Heart Of Westbury. Newly Renovated With New Wood
+                    I love jegmtechworld
                   </p>
 
-                  <ul class="card-list">
+                  <!-- <ul class="card-list">
 
                     <li class="card-item">
                       <strong>3</strong>
@@ -1686,7 +1568,7 @@
                       <span>Square Ft</span>
                     </li>
 
-                  </ul>
+                  </ul> -->
 
                 </div>
 
@@ -1695,15 +1577,133 @@
                   <div class="card-author">
 
                     <figure class="author-avatar">
-                      <img src="./assets/images/author.jpg" alt="William Seklo" class="w-100">
+                      <img src="./assets/images/author.jpeg" alt="William Seklo" class="w-100">
                     </figure>
 
                     <div>
                       <p class="author-name">
-                        <a href="#">William Seklo</a>
+                        <a href="#">Isaac .O</a>
                       </p>
 
-                      <p class="author-title">Estate Agents</p>
+                      <p class="author-title">Mechanical Engineer</p>
+                    </div>
+
+                  </div>
+
+                  <div class="card-footer-actions">
+
+                    <button class="card-footer-actions-btn">
+                      <ion-icon name="resize-outline"></ion-icon>
+                    </button>
+
+                    <button class="card-footer-actions-btn">
+                      <ion-icon name="heart-outline"></ion-icon>
+                    </button>
+
+                    <button class="card-footer-actions-btn">
+                      <ion-icon name="add-circle-outline"></ion-icon>
+                    </button>
+
+                  </div>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="property-card">
+
+                <!-- <figure class="card-banner">
+
+                  <a href="#">
+                    <img src="./assets/images/property-1.jpg" alt="New Apartment Nice View" class="w-100">
+                  </a>
+
+                  <div class="card-badge green">For Rent</div>
+
+                  <div class="banner-actions">
+
+                    <button class="banner-actions-btn">
+                      <ion-icon name="location"></ion-icon>
+
+                      <address>Belmont Gardens, Chicago</address>
+                    </button>
+
+                    <button class="banner-actions-btn">
+                      <ion-icon name="camera"></ion-icon>
+
+                      <span>4</span>
+                    </button>
+
+                    <button class="banner-actions-btn">
+                      <ion-icon name="film"></ion-icon>
+
+                      <span>2</span>
+                    </button>
+
+                  </div>
+
+                </figure> -->
+
+                <div class="card-content">
+
+                  <!-- <div class="card-price">
+                    <strong>$34,900</strong>/Month
+                  </div>
+
+                  <h3 class="h3 card-title">
+                    <a href="#">New Apartment Nice View</a>
+                  </h3> -->
+
+                  <p class="card-text">
+                    I love jegmtechworld
+                  </p>
+
+                  <!-- <ul class="card-list">
+
+                    <li class="card-item">
+                      <strong>3</strong>
+
+                      <ion-icon name="bed-outline"></ion-icon>
+
+                      <span>Bedrooms</span>
+                    </li>
+
+                    <li class="card-item">
+                      <strong>2</strong>
+
+                      <ion-icon name="man-outline"></ion-icon>
+
+                      <span>Bathrooms</span>
+                    </li>
+
+                    <li class="card-item">
+                      <strong>3450</strong>
+
+                      <ion-icon name="square-outline"></ion-icon>
+
+                      <span>Square Ft</span>
+                    </li>
+
+                  </ul> -->
+
+                </div>
+
+                <div class="card-footer">
+
+                  <div class="card-author">
+
+                    <figure class="author-avatar">
+                      <img src="./assets/images/author.jpeg" alt="William Seklo" class="w-100">
+                    </figure>
+
+                    <div>
+                      <p class="author-name">
+                        <a href="#">Isaac .O</a>
+                      </p>
+
+                      <p class="author-title">Mechanical Engineer</p>
                     </div>
 
                   </div>
@@ -1744,9 +1744,7 @@
         <div class="container">
 
           <figure class="about-banner">
-            <img src="./assets/images/about-banner-1.png" alt="House interior">
-
-            <img src="./assets/images/about-banner-2.jpg" alt="House interior" class="abs-img">
+            <img src="./assets/images/contact-banner-1.jpg" alt="House interior">
           </figure>
 
           <div class="about-content">
